@@ -52,6 +52,7 @@ Version 1.0.xxxx (December xxth 2013)
 - Implemented: Dummy hardware, option to add counter/electric sensors
 - Implemented: Blockly/Lua, Send Email notification to
 - Fixed: OWFS Windows, Counter(s)
+- Implemented: Prevent multiple windows instances from running
 
 Version 1.0.1186 (November 16th 2013)
 - Fixed: rain week log, some top legend values did not show on the chart
